<resources>
    <string name="app_name">Stocks</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="stocks_fragment_label">Stocks Fragment</string>
    <string name="settings_fragment_label">Settings Fragment</string>
    <string name="stock_info_fragment_label">Stock Info Fragment</string>

    //settings
    <string name="only_rising">Show only rising stocks</string>
    <string name="only_fallen">Show only fallen stocks</string>
    <string name="select_percentage">Select the percentage of change (%)</string>
    <string name="select_currency">Select the currency</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="title_search">Search</string>

    <string-array name="currencies">
        <item>USD</item>
        <item>EUR</item>
        <item>RUB</item>
        <item>GBP</item>
        <item>CHF</item>
        <item>JPY</item>
        <item>CAD</item>
        <item>AUD</item>
    </string-array>

</resources>